# go2w_elevation_map

./: .gitignore  README.md
.devcontainer/: Dockerfile  post-create.sh
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
docker/: Dockerfile.robot  README_ROBOT.md
docs/: REAL_ROBOT_BRINGUP.md
ros2_ws/src/go2w_bringup/: package.xml  setup.py
ros2_ws/src/go2w_bringup/rviz/: go2w_mppi.rviz
ros2_ws/src/go2w_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/go2w_navigation/config/: nav2_params.yaml
ros2_ws/src/go2w_navigation/launch/: bringup_mppi.launch.py
ros2_ws/src/go2w_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/go2w_perception/go2w_perception/: terrain_cost_publisher.py  traversability_mapper.py  twist_to_stamped.py
ros2_ws/src/go2w_perception/launch/: rtabmap_lidar.launch.py
ros2_ws/src/go2w_robot_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/go2w_robot_bridge/go2w_robot_bridge/: cmd_vel_to_sport.py  sportmode_to_odom.py
ros2_ws/src/go2w_robot_bridge/launch/: robot_bringup.launch.py
