<?xml version="1.0"?>
<package format="3">
  <name>go2w_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and RViz configs for Go2W</description>
  <maintainer email="you@todo.com">Julien</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>go2w_perception</depend>
  <depend>go2w_navigation</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
