<?xml version="1.0"?>
<package format="3">
  <name>go2w_perception</name>
  <version>0.1.0</version>
  <description>Terrain cost publisher for Go2W 3D costmap</description>
  <maintainer email="you@todo.com">Julien</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
